fix: corrige deadlock e cadencia leitura do CSV na ingestão em lote
- Remove ExecutorService do try-with-resources para evitar deadlock.
- Move dbPermits.acquire() para antes do submit para poupar RAM.
- Garante a liberação do semáforo no bloco finally.