@@ -7,6 +7,8 @@ import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
 
@@ -14,6 +16,8 @@ public class EfficientTransactionIngestor {
 
     public static final int FRAUD_LIMIT = 10_000;
     public static final int LINE_BATCH_SIZE = 2_500;
+
+    private final Semaphore dbPermits = new Semaphore(10);
 
     public void readAsStream(String fileName, Consumer<Transaction> consumer) {
         Path path = Paths.get(fileName);
@@ -35,8 +39,10 @@ public class EfficientTransactionIngestor {
     public void readAsBatch(String fileName, Consumer<List<Transaction>> batchConsumer) {
         Path path = Paths.get(fileName);
 
-        try (ExecutorService executor = Executors.newFixedThreadPool(12);
-             Stream<String> lines = Files.lines(path).skip(1)) {
+        // 1. Executor fora do try-with-resources para não causar deadlock
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+
+        try (Stream<String> lines = Files.lines(path).skip(1)) {
             Iterator<String> iterator = lines.iterator();
 
             List<String> lineBatch = new ArrayList<>(LINE_BATCH_SIZE);
@@ -45,33 +51,68 @@ public class EfficientTransactionIngestor {
                 lineBatch.add(line);
 
                 if(lineBatch.size() >= LINE_BATCH_SIZE){
-                    IO.println("Executando batch injetor...");
+                    IO.println("Lendo lote e aguardando liberação do banco...");
                     final List<String> currentLineBatch = List.copyOf(lineBatch);
-                    executor.submit(() -> executeBactch(currentLineBatch, batchConsumer));
                     lineBatch.clear();
+
+                    // 2. O PULO DO GATO: O loop principal PARA AQUI até ter vaga no banco.
+                    // Isso impede que a memória RAM lote com milhões de linhas lidas à toa.
+                    dbPermits.acquire();
+
+                    executor.submit(() -> {
+                        try {
+                            executeBactch(currentLineBatch, batchConsumer);
+                        } catch (Exception e){
+                            e.printStackTrace();
+                        }
+                    });
                 }
             }
 
             if(!lineBatch.isEmpty()){
                 IO.println("Executando batch final injestor...");
                 final List<String> currentLineBatch = List.copyOf(lineBatch);
-                executor.submit(() -> executeBactch(currentLineBatch, batchConsumer));
+
+                dbPermits.acquire();
+                executor.submit(() -> {
+                    try {
+                        executeBactch(currentLineBatch, batchConsumer);
+                    } catch (Exception e){
+                        e.printStackTrace();
+                    }
+                });
             }
 
         } catch (Exception e) {
             throw new RuntimeException("Erro ao ler o arquivo, via NIO: " + fileName, e);
+        } finally {
+            // 3. Encerramento seguro das threads após ler o arquivo inteiro
+            executor.shutdown();
+            try {
+                // Aguarda até 1 hora para o banco terminar de processar os últimos lotes
+                executor.awaitTermination(1, TimeUnit.HOURS);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
         }
     }
 
     private void executeBactch(List<String> lineBatch, Consumer<List<Transaction>> batchConsumer) {
-        List<Transaction> transactionBatch = lineBatch
-                .stream()
-                .map(this::parseTransaction)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+        try {
+            List<Transaction> transactionBatch = lineBatch
+                    .stream()
+                    .map(this::parseTransaction)
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .toList();
 
-        batchConsumer.accept(transactionBatch);
+            // Envia os dados para o MySQL
+            batchConsumer.accept(transactionBatch);
+
+        } finally {
+            // 4. O MAIS IMPORTANTE: Avisa a thread principal que terminou e libera a vaga
+            dbPermits.release();
+        }
     }
 
     private Optional<Transaction> parseTransaction(String line) {
